--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,7 @@
 html {
   min-height: 100%;
   position: relative;
+  color: #2f2f2f;
 }
 
 .container-fluid {
@@ -15,9 +16,11 @@ html {
     margin-bottom: 0;
     font-size: 12px;
     letter-spacing: 5px;
+    background-color: #ffe8d6;
+    color: #d88569 ;
 }
-.navbar-nav  li a:hover {
-    color: #1abc9c !important;
+.navbar-nav li a:hover {
+    color: #522a25 !important;
 }
 
 .footer-padding {
@@ -30,7 +33,7 @@ html {
 	bottom: 0;
 	width: 100%;
 	height: 60px;
-	background-color: #1abc9c;
+	background-color: #dd937a ;
 }
 
 .footer p {
